Finished first box

--- a/Nivell 1/Exercici 1.html
+++ b/Nivell 1/Exercici 1.html
@@ -7,5 +7,14 @@
     <title>Exercici 1</title>
     <link rel="stylesheet" href="./Exercici 1.css" />
   </head>
-  <body></body>
+  <body>
+    <div id="box-1">
+      <div class="top-1">
+        <div></div>
+        <div></div>
+        <div></div>
+      </div>
+      <div class="bottom-1"><div></div></div>
+    </div>
+  </body>
 </html>
