--- a/Nivell 1/Exercici 1.html
+++ b/Nivell 1/Exercici 1.html
@@ -16,5 +16,26 @@
       </div>
       <div class="bottom-1"><div></div></div>
     </div>
+
+    <div id="box-2">
+      <div class="left-2">
+        <div class="row">
+          <div></div>
+          <div></div>
+        </div>
+        <div class="row">
+          <div></div>
+          <div></div>
+        </div>
+        <div class="full-row">
+          <div></div>
+        </div>
+      </div>
+      <div class="separator"></div>
+      <div class="right-2">
+        <div></div>
+        <div></div>
+      </div>
+    </div>
   </body>
 </html>
