--- a/Nivell 1/Nivel 1.html
+++ b/Nivell 1/Nivel 1.html
@@ -4,8 +4,8 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Exercici 1</title>
-    <link rel="stylesheet" href="./Exercici 1.css" />
+    <title>Nivel 1</title>
+    <link rel="stylesheet" href="./Nivel 1.css" />
   </head>
   <body>
     <div id="box-1">
