Added markup for the header, started styling the navbar

--- a/Nivell 2/Nivell 2.html
+++ b/Nivell 2/Nivell 2.html
@@ -6,6 +6,44 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Nivell 2</title>
     <link rel="stylesheet" href="./Nivell 2.css" />
+    <script src="https://kit.fontawesome.com/1f2bd6a4f6.js" crossorigin="anonymous"></script>
   </head>
-  <body></body>
+  <body>
+    <header id="header">
+      <nav id="navbar">
+        <div class="logo-div">
+          <img src="./images/logo.png" alt="Logo" />
+        </div>
+        <div class="links-div">
+          <ul class="ul-container">
+            <li class="li-links">
+              <a href="#"><i class="fa-solid fa-house-chimney-crack"></i>Inicio</a>
+            </li>
+            <li class="li-links">
+              <a href="#"><i class="fa-regular fa-map"></i>Rutas</a>
+            </li>
+            <li class="li-links">
+              <a href="#"><i class="fa-solid fa-bell-concierge"></i>Hoteles</a>
+            </li>
+            <li class="li-links">
+              <a href="#"><i class="fa-solid fa-plane-departure"></i>Vuelos</a>
+            </li>
+            <li class="li-links">
+              <a href="#"><i class="fa-solid fa-envelope"></i>Contacto</a>
+            </li>
+          </ul>
+        </div>
+        <div class="social-div">
+          <ul class="ul-social">
+            <li class="li-social">
+              <a href="#"><i class="fa-brands fa-facebook-square" style="color: #3b5998; margin-right: 1.5rem"></i></a>
+            </li>
+            <li class="li-social">
+              <a href="#"><i class="fa-brands fa-twitter" style="color: #00acee"></i></a>
+            </li>
+          </ul>
+        </div>
+      </nav>
+    </header>
+  </body>
 </html>
