--- a/Nivell 2/Nivell 2.html
+++ b/Nivell 2/Nivell 2.html
@@ -17,19 +17,19 @@
         <div class="links-div">
           <ul class="ul-container">
             <li class="li-links">
-              <a href="#"><i class="fa-solid fa-house-chimney-crack"></i>Inicio</a>
+              <a href="#"><i class="fa-solid fa-house-chimney-crack icons"></i>Inicio</a>
             </li>
             <li class="li-links">
-              <a href="#"><i class="fa-regular fa-map"></i>Rutas</a>
+              <a href="#"><i class="fa-regular fa-map icons"></i>Rutas</a>
             </li>
             <li class="li-links">
-              <a href="#"><i class="fa-solid fa-bell-concierge"></i>Hoteles</a>
+              <a href="#"><i class="fa-solid fa-bell-concierge icons"></i>Hoteles</a>
             </li>
             <li class="li-links">
-              <a href="#"><i class="fa-solid fa-plane-departure"></i>Vuelos</a>
+              <a href="#"><i class="fa-solid fa-plane-departure icons"></i>Vuelos</a>
             </li>
             <li class="li-links">
-              <a href="#"><i class="fa-solid fa-envelope"></i>Contacto</a>
+              <a href="#"><i class="fa-solid fa-envelope icons"></i>Contacto</a>
             </li>
           </ul>
         </div>
