Added CTA div and positioned it at the bottom of the header

--- a/Nivell 2/Nivell 2.html
+++ b/Nivell 2/Nivell 2.html
@@ -44,6 +44,10 @@
           </ul>
         </div>
       </nav>
+
+      <div class="cta">
+        <h1>”Disfruta de la experiencia de otros viajeros”</h1>
+      </div>
     </header>
   </body>
 </html>
