Added main content section, started styling it

--- a/Nivell 2/Nivell 2.html
+++ b/Nivell 2/Nivell 2.html
@@ -49,5 +49,14 @@
         <h1>”Disfruta de la experiencia de otros viajeros”</h1>
       </div>
     </header>
+
+    <main>
+      <section class="content-section">a</section>
+
+      <aside>
+        <h3>Something</h3>
+        <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Ab voluptatum sed animi earum deleniti ducimus temporibus et quidem, omnis quas ipsam possimus dolorem totam alias eaque illum nulla, maiores suscipit molestias obcaecati. Assumenda in dignissimos, repellendus tempora id cumque dolorem ad.</p>
+      </aside>
+    </main>
   </body>
 </html>
