minor fixes to paddings and margins

--- a/Nivell 2/Nivell 2.html
+++ b/Nivell 2/Nivell 2.html
@@ -98,6 +98,8 @@
             </div>
           </article>
         </div>
+
+        <p class="extra-info">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Explicabo ipsam doloribus fugiat saepe est quia eligendi neque in voluptas. Illum, inventore. Neque et similique provident, autem doloremque perspiciatis voluptate magni distinctio at animi vel sapiente magnam omnis adipisci, odio veritatis! Vero tempora eligendi voluptatem labore corrupti.</p>
       </section>
 
       <aside>
