--- a/Nivell 2/Nivell 2.html
+++ b/Nivell 2/Nivell 2.html
@@ -103,8 +103,8 @@
               </div>
               <h4>VIDA NOCTURNA</h4>
               <p class="blog-content">
-                Lorem ipsum, dolor sit amet consectetur adipisicing elit. Sint sequi dolorum assumenda, quis magnam ipsa iste nemo quos in, incidunt voluptatum repellat accusantium at eos et non sapiente soluta officiis itaque tenetur unde quia quaerat! Libero iste quae adipisci laborum labore optio, modi obcaecati error mollitia voluptate numquam aperiam vitae ipsum at minus repellat nesciunt, facilis debitis provident assumenda? Accusantium hic magni harum earum. Similique corrupti numquam
-                optio dolorum! Facilis nobis ab, cupiditate enim iste harum a rerum nihil. Quaerat.
+                Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolores porro aliquid similique dolor suscipit officia! Illum cum, aperiam temporibus ab maiores quo explicabo? Iure dolore debitis error dignissimos eius adipisci, ducimus maxime ab modi commodi a ut voluptate illo quam sequi alias quia reprehenderit delectus eum perferendis fugit facilis non! Debitis natus maiores neque molestiae eligendi praesentium exercitationem minus iste ea incidunt deserunt delectus iure, nihil
+                dolor perferendis quis a sunt? Repellendus doloremque, tenetur accusantium perferendis iusto adipisci rerum optio!
               </p>
               <a href="#">Leer más...</a>
             </div>
