Tweaks to color palette

--- a/Nivell 2/Nivell 2.html
+++ b/Nivell 2/Nivell 2.html
@@ -60,8 +60,8 @@
               </div>
               <h4>CULTURA</h4>
               <p class="blog-content">
-                Lorem ipsum dolor sit amet consectetur adipisicing elit. Perferendis natus quasi nulla nihil, quisquam asperiores ab repudiandae magnam deleniti molestiae veritatis eos ducimus, quis expedita quod veniam hic ipsam, sunt architecto nam dicta? Culpa a, harum facilis quaerat animi doloremque est fugiat officia. Odit corporis commodi et neque ipsam eaque in vero illo deleniti expedita, impedit eum earum doloremque, nihil illum suscipit obcaecati numquam dolorum iure totam sequi
-                placeat culpa? Distinctio minima consequuntur adipisci? Quidem aliquid officia autem delectus reprehenderit.
+                Lorem ipsum dolor sit amet consectetur adipisicing elit. Sed numquam ipsam commodi sequi quam, quisquam nostrum explicabo quo vero fugit earum possimus nobis quaerat beatae veniam tempora assumenda eaque porro, repudiandae aut sapiente accusantium. Odit tempora recusandae, quam ab voluptate ducimus deleniti magnam fugit, vitae libero repudiandae iste consequuntur rerum quasi ad modi vero esse voluptas omnis illo! Enim mollitia obcaecati architecto a, aliquam voluptatem veniam
+                provident iure aut. Eveniet tempore, doloremque soluta enim deserunt magnam illum commodi iure ab.
               </p>
               <a href="#">Leer más...</a>
             </div>
