--- a/Nivell 3/Nivell 3.html
+++ b/Nivell 3/Nivell 3.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Nivell 2 y 3</title>
+    <title>Nivell 3</title>
     <link rel="stylesheet" href="./Nivell 3.css" />
     <script src="https://kit.fontawesome.com/1f2bd6a4f6.js" crossorigin="anonymous"></script>
   </head>
